welcome.lessons.welcome.variables.Variables.scala.error
Variables:1: error: not found: type int
var NbPas:int=0
          ^Variables:7: error: not found: type int
var DejaFait:int=0
             ^